# portit

./: Cargo.toml  MANUAL.md  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  main.rs  ports.rs  ui.rs
src/app/: input.rs  state.rs
static/: demo.tape
